force-app/main/default/objects/Social_Post_Negative__c/Social_Post_Negative__c.object-meta.xml
<CustomObject>
    <label>Social Post Negative</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Social Post Negative Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Social Post Negatives</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>