force-app/main/default/objects/Social_Post_Negative__c/fields/Post_Channel__c.field-meta.xml
<CustomField>
    <fullName>Post_Channel__c</fullName>
    <label>Post Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Facebook</fullName>
            </value>
            <value>
                <fullName>Twitter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>