force-app/main/default/objects/Social_Post_Negative__c/fields/Posted_Date__c.field-meta.xml
<CustomField>
    <fullName>Posted_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Posted Date</label>
    <type>DateTime</type>
</CustomField>