force-app/main/default/objects/Social_Post_Negative__c/fields/Social_Persona_Negative__c.field-meta.xml
<CustomField>
    <fullName>Social_Persona_Negative__c</fullName>
    <label>Social Persona Negative</label>
    <referenceTo>Social_Persona_Negative__c</referenceTo>
    <relationshipLabel>Social Post Negatives</relationshipLabel>
    <relationshipName>Social_Post_Negatives</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>