force-app/main/default/objects/Social_Post_Negative__c/fields/Social_Post_ID__c.field-meta.xml
<CustomField>
    <fullName>Social_Post_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Social Post ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>